push porcentagens 0- 100 / 100 1 - 100 / 100 2 - 100 / 100 3 - 65 / 59 4 - 31,8 / 26 5 - 10,7 / 11 6 - 0,3 / 2 7 - 0 / 1 8- 0 / 0